--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,12 +26,18 @@ android {
 
 dependencies {
 
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
+    implementation 'com.google.android.material:material:1.2.1'
     def lifecycle_version = "2.2.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     def nav_version = '2.3.1'
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
