--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
 
     implementation "androidx.fragment:fragment-ktx:1.2.5"
+    implementation 'com.firebaseui:firebase-ui-auth:4.1.0'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.20"
